minor fix to h1 styling on small screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -144,6 +144,9 @@ span {
 		flex-direction: column;
 		position: relative;
 	}
+	h1 {
+		text-align: center;
+	}
 
 	h2 {
 		text-align: center;
